<resources>
    <string name="app_name">RFP FITNESS</string>
    <string name="button"> Get Started</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name = "action_register">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="profile">EXERCISE</string>
    <string name="nutrition">NUTRITION</string>
    <string name="workout">PEDOMETER</string>
    <string name="ARMS">ARMS</string>
    <string name="ABS">ABS</string>
    <string name="LEGS">LEGS</string>
    <string name="OTHER">OTHER</string>
    <string name="todo">TO DO:</string>
    <string name="cruches">Crutches</string>
    <string name="airbikecruches">Air Bike Crutches</string>
    <string name="russiantwists">Russian Twists</string>
    <string name="beginner">Beginner</string>
    <string name="intermediate">Intermediate</string>
    <string name="keto">Keto</string>
    <string name="vegan">Vegan</string>
    <string name="paleo">Paleo</string>
    <string name="textview">What did you eat today?</string>
    <string name="food1">Item 1: Banana</string>
    <string name="name">Item 2: Grilled Cheese</string>
    <string name="food2">Item 3: Greek Salad</string>
    <string name="total">Macro Nutrition: Cal: 100, Carbs: 100g</string>
    <string name="totalcalsburned">Total Calories Burned!</string>
    <string name="picks">Pick from below:</string>
    <string name="workoutpicks">Pick Workout(s): </string>
    <string name="nameprofile">John Doe</string>
    <string name="activitesoverview">Activities Overview</string>
    <string name="cals">Set Goals</string>
    <string name="calsburned">Calories Burned</string>
    <string name="overallgoals">Overall goals met!</string>
    <string name="Height">Height: </string>
    <string name="StartedWeight">Started Weight: </string>
    <string name="CurrentWeight">Current Weight: </string>
    <string name="totcalsN">Total Calories Eaten: </string>
    <string name="calsleftN">Total Calories Left: </string>
    <string name="burned">Calories Burned:</string>
    <string name="calsburnedtd">Burned Goal:</string>
    <string name="submitfood">Submit Food</string>

</resources>